# flexpart

./: .gitignore  .mch-ci.yml  CHANGES_since_10.4.md  Dockerfile  Dockerfile.base  Jenkinsfile  README.md  README.meteoswiss.md  entrypoint.sh  sandbox_generator.py  sonar-project.properties  spack.yaml  upload_s3.py
docker/: Dockerfile  entrypoint.sh  fdb_schema  genconf.yml  sandbox_generator.py  spack.yaml  upload_s3.py
dockerfiles/: Dockerfile.base  Dockerfile.spack  spack.yaml
jenkins/: Jenkinsfile  test.sh
options/: COMMAND  OUTGRID  RELEASES.bushehr  RELEASES.bushehr2  RELEASES.goe  RELEASES.segula
options.meteoswiss/: COMMAND  OUTGRID.f  OUTGRID.g  RELEASES  RELEASES.bez  RELEASES.cherno  RELEASES.fes5  RELEASES.goe2  RELEASES.punggye  RELEASES.punggye5
spack_env/: spack.yaml
spack_repo/: repo.yaml
src/: CSCS.env  FLEXPART.env  FLEXPART.f90  FLEXPART_MPI.f90  advance.f90  assignland.f90  boundcond_domainfill.f90  boundcond_domainfill_mpi.f90  caldate.f90  com_mod.f90  coordtrafo.f90  detectformat.f90  erf.f90  get_fdbtimes.f90  getfields_mpi.f90  gridcheck_ecmwf.f90  gridcheck_gfs.f90  gridcheck_nests.f90  juldate.f90  makefile  makefile.meteoswiss  makefile_meteoswiss  mpi_mod.f90  (+36 more)
utils/: README.rst  pip.conf  pyproject.toml  sonar-project.properties  test_ci.sh
utils/flexpart_ifs_utils/: __init__.py  __main__.py  grib_utils.py  model.py  prepare_flexpart.py  runtime_configuration.j2  s3_utils.py  sandbox_generator.py
utils/flexpart_ifs_utils/config/: service_settings.py  settings.yaml
utils/test/: .env  conftest.py  spack.yaml  test_flexpart.py  test_main.py  test_prepare.py  test_s3.py
utils/test/references/: runtime_configuration.yaml
utils/test/references/BEZ/input/: COMMAND  OUTGRID  RELEASES
(+29 files in other folders)
